samples/_failures_safe/1761402919_7ef1fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5e4c610.c: In function ‘main’:
./samples/SAFE/__tmp_f5e4c610.c:148:9: error: expected declaration or statement at end of input
  148 |         printf("Addition not possible\n");
      |         ^~~~~~
./samples/SAFE/__tmp_f5e4c610.c:148:9: error: expected declaration or statement at end of input
